config/tekton/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-iap
  namespace: tekton-pipelines
  annotations:
    "cert-manager.io/cluster-issuer": "letsencrypt"
spec:
  rules:
  - host: "tekton.shared.dogcat.nvoss.demo.altostrat.com"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard-iap
            port:
              number: 8080
  tls:
  - hosts:
      - "tekton.shared.dogcat.nvoss.demo.altostrat.com"
    secretName: tekton-dashboard-tls
